--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,11 +5,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url($assets-in-app-global-path + 'fonts/icomoon.eot?hxi1c');
-  src:  url($assets-in-app-global-path + 'fonts/icomoon.eot?hxi1c#iefix') format('embedded-opentype'),
-    url($assets-in-app-global-path + 'fonts/icomoon.ttf?hxi1c') format('truetype'),
-    url($assets-in-app-global-path + 'fonts/icomoon.woff?hxi1c') format('woff'),
-    url($assets-in-app-global-path + 'fonts/icomoon.svg?hxi1c#icomoon') format('svg');
+  src:  url($assets-in-app-global-path + 'fonts/icomoon.eot?agasde3');
+  src:  url($assets-in-app-global-path + 'fonts/icomoon.eot?agasde3#iefix') format('embedded-opentype'),
+    url($assets-in-app-global-path + 'fonts/icomoon.ttf?agasde3') format('truetype'),
+    url($assets-in-app-global-path + 'fonts/icomoon.woff?agasde3') format('woff'),
+    url($assets-in-app-global-path + 'fonts/icomoon.svg?agasde3#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
