--- a/assets/scss/icons.scss
+++ b/assets/scss/icons.scss
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-tap:before {
+  content: "\ea45";
+}
+.icon-wfh:before {
+  content: "\ea44";
+}
 .icon-fire:before {
   content: "\ea43";
 }
