--- a/assets/scss/termo-plan.scss
+++ b/assets/scss/termo-plan.scss
@@ -1,3 +1,7 @@
+.thermo-plan {
+	position: relative;
+}
+
 .thermo-plan--vertical {
 	height: 360px;
 	max-width: 250px;
@@ -168,4 +172,12 @@
 		width: 2px;
 		margin-left: -1px;
 	}
+}
+
+.thermo-plan--change {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
+	font-size: 2.5rem;
 }
