--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -76,9 +76,10 @@
 		<div class="col-xs-12 col-sm-6 col-md-7 col-lg-8">
 			<div class="row">
 				<div ng-repeat="(id, data) in inside.individual" class="col-xs-12 col-md-6">
-					<div class="thermo-room thermo-component">
-						<div class="thermo-room--status color-bg-{{scope().restartSensorInProgress ? 'yellow' : (data.active ? 'green' : 'red')}}"></div>
-						<div class="thermo-room--label">{{roomIdToLabel[id] || id}} <span>({{id}})</span></div>
+					<div class="thermo-room thermo-component" ng-class="{'thermo-room--disabled': !data.enabled}">
+						<div class="thermo-room--status color-bg-{{scope().restartSensorInProgress ? 'yellow' : (!data.enabled ? 'gray' : data.active ? 'green' : 'red')}}"></div>
+						<i class="thermo-room--switch icon-power-button" ng-click="scope().toggleSensorStatus(id)"></i>
+						<div class="thermo-room--label" ng-click="scope().openModalChangeSensorLabel(id)">{{data.label || id}} <span>({{id}})</span></div>
 						<div class="row">
 							<div class="col-xs-6">
 								<div class="thermo-room--temperature">
@@ -99,8 +100,9 @@
 		</div>
 
 		<div class="col-xs-12">
-			<div class="thermo-component thermo-plan--horizontal">
+			<div class="thermo-component thermo-plan thermo-plan--horizontal">
 				<h3>{{todaysPlan.plan.ref.name}}</h3>
+				<i class="icon-settings-1 color-maroon thermo-plan--change" data-toggle="modal" data-target=".thermo-select-plan--modal" data-default-week-plan="{{currentDate.getDay()}}"></i>
 
 				<div class="thermo-plan--current-time" ng-class="{'thermo-plan--last-part': percentInDay > 80}" style="left: {{percentInDay}}%;">
 					{{currentTime}}
@@ -168,10 +170,10 @@
 						</div>
 					</div>
 
+					<!--
 					<div class="col-xs-12">
 						<h2>Calendar</h2>
 
-						<!-- Responsive calendar - START -->
 						<div class="responsive-calendar">
 							<div class="controls">
 								<a class="pull-left" data-go="prev"><div class="btn btn-primary">Prev</div></a>
@@ -195,8 +197,8 @@
 
 							</div>
 						</div>
-						<!-- Responsive calendar - END -->
 					</div>
+					-->
 				</div>
 			</div>
 			<div class="modal-footer">
